cabal-version: 2.0
name:           pmlb
version:        0.0.0.1
synopsis:       See readme.md
description:    See readme.md for description.
category:       project
homepage:       https://github.com/tonyday567/pmlb#readme
bug-reports:    https://github.com/tonyday567/pmlb/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day (c) 2017
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    readme.md
    stack.yaml

source-repository head
  type: git
  location: https://github.com/tonyday567/pmlb

library
  exposed-modules:
      PMLB
      PMLB.DataSets
      PMLB.Csv
  hs-source-dirs:
      src
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  ghc-options: -funbox-strict-fields -fforce-recomp
  build-depends:
      Frames
    , QuickCheck
    , attoparsec
    , base >=4.7 && <5
    , bytestring
    , containers
    , data-default
    , directory
    , distributive
    , flow
    , foldl
    , generic-lens
    , lens
    , managed
    , numhask
    , numhask-prelude
    , numhask-space
    , optparse-generic
    , pipes
    , pipes-text
    , protolude
    , readme-lhs
    , scientific
    , streaming
    , streaming-bytestring
    , streaming-utils
    , sv
    , text
  default-language: Haskell2010

executable pmlb
  main-is: pmlb.hs
  hs-source-dirs:
      app
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , data-default
    , flow
    , formatting
    , generic-lens
    , lens
    , numhask-prelude
    , numhask-space
    , optparse-generic
    , pmlb
    , protolude
    , readme-lhs
    , streaming
    , sv
    , text
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  other-modules:
      Paths_pmlb
  hs-source-dirs:
      test
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  build-depends:
      base >=4.7 && <5
    , doctest
    , protolude
  default-language: Haskell2010
