cabal-version: 2.0
name:           pmlb
version:        0.0.0.1
synopsis:       See readme.md
description:    See readme.md for description.
category:       project
homepage:       https://github.com/tonyday567/pmlb#readme
bug-reports:    https://github.com/tonyday567/pmlb/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day (c) 2017
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    readme.md
    stack.yaml

source-repository head
  type: git
  location: https://github.com/tonyday567/pmlb

library
  exposed-modules:
      PMLB
      PMLB.DataSets
      PMLB.Csv
  hs-source-dirs:
      src
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  ghc-options: -funbox-strict-fields -fforce-recomp
  build-depends:
    QuickCheck
    , attoparsec
    , base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , distributive
    , foldl
    , generic-lens
    , lens
    , managed
    , numhask-space
    , optparse-generic
    , pipes
    , protolude
    , scientific
    , streaming
    , streaming-bytestring
    , streaming-utils
    , text
  default-language: Haskell2010

executable pmlb
  main-is: app.hs
  hs-source-dirs:
      app
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5
    , QuickCheck
    , generic-lens
    , lens
    , numhask-space
    , optparse-generic
    , pmlb
    , pretty-simple
    , protolude
    , readme-lhs
    , text
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  other-modules:
      Paths_pmlb
  hs-source-dirs:
      test
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  build-depends:
      base >=4.7 && <5
    , doctest
    , protolude
  default-language: Haskell2010
