cabal-version: 2.0
name:           pmlb
version:        0.0.0.1
synopsis:       See readme.md
description:    See readme.md for description.
category:       project
homepage:       https://github.com/tonyday567/pmlb#readme
bug-reports:    https://github.com/tonyday567/pmlb/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day (c) 2017
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    readme.md
    stack.yaml

source-repository head
  type: git
  location: https://github.com/tonyday567/pmlb

library
  exposed-modules:
      PMLB
  hs-source-dirs:
      src
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  ghc-options: -funbox-strict-fields -fforce-recomp
  build-depends:
    QuickCheck
    , flatparse
    , base >=4.7 && <5
    , box
    , bytestring
    , containers
    , directory
    , distributive
    , foldl
    , optics-core
    , numhask
    , numhask-space
    , scientific
    , text
  default-language: GHC2021
